[gd_scene load_steps=6 format=3 uid="uid://cmyf0ugk6j2ux"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_6lpdk"]
[ext_resource type="FontFile" uid="uid://ccnln6n4c0g54" path="res://Assets/Fonts/upheavtt.ttf" id="1_kuu5f"]
[ext_resource type="Theme" uid="uid://veh2p1lln2ov" path="res://label_theme.tres" id="2_7x0bs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1m886"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_e5a64"]
default_font = ExtResource("1_kuu5f")
default_font_size = 40

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_6lpdk")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1151.0
offset_bottom = 647.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_7x0bs")

[node name="LifeCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kuu5f")
theme_override_font_sizes/font_size = 36
text = " 1 UP"

[node name="GameScoreLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kuu5f")
theme_override_font_sizes/font_size = 36
text = " SCORE: 0"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1m886")

[node name="GameLabel" type="Label" parent="MarginContainer/CenterContainer/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_e5a64")
text = "Level Won!"
vertical_alignment = 1

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
